other/only-trustworthy-registries-set-root/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: trust-registry-ns
spec:
  containers:
  - name: busybox
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: trust-registry-ns
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: kyverno02
    image: ghcr.io/nginx-proxy/nginx-proxy:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  namespace: trust-registry-ns
spec:
  containers:
  - name: kyverno01
    image: ghcr.io/nginx-proxy/nginx-proxy:latest
  - name: busybox
    image: busybox:1.35
