other/only-trustworthy-registries-set-root/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
  namespace: trust-registry-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: kyverno01
        image: ghcr.io/kyverno/kyverno:latest
      - name: busybox
        image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
  namespace: trust-registry-ns
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: busybox
            image: busybox:1.35
          - name: kyverno02
            image: ghcr.io/kyverno/kyverno:latest
          restartPolicy: OnFailure
