other/only-trustworthy-registries-set-root/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: only-trustworthy-registries-set-root
status:
  ready: true
