other/only-trustworthy-registries-set-root/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: only-trustworthy-registries-set-root
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../only-trustworthy-registries-set-root.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: pod-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-bad.yaml
    - apply:
        file: podcontroller-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: podcontroller-bad.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: only-trustworthy-registries-set-root
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n trust-registry-ns
